# TensorRT-Edge-LLM

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  cpp_api.html  index.html  overview.html  pyproject.toml  python_api.html  requirements-server.txt  requirements.txt  setup_pybind.py  sphinx-reading-durations.json  update_docs.sh
cpp/: CMakeLists.txt
cpp/action/: alpamayo1ActionRunner.cpp  alpamayo1ActionRunner.h
cpp/builder/: audioBuilder.cpp  audioBuilder.h  builderUtils.cpp  builderUtils.h  llmBuilder.cpp  llmBuilder.h  visualBuilder.cpp  visualBuilder.h
cpp/common/: bindingNames.h  cudaMacros.h  inputLimits.h  logger.h  ropeUtils.h  safetensorsUtils.cpp  tensorUtils.cpp  trtUtils.cpp  trtUtils.h  version.cpp  version.h
cpp/kernels/audioAttentionKernels/: README.md  gemma4AudioAttention.cu  gemma4AudioAttention.h
cpp/kernels/common/: vectorizedTypes.cuh
cpp/kernels/contextAttentionKernels/: contextFMHARunner.cpp  contextFMHARunner.h  cuteDslFFPARunner.cpp  cuteDslFFPARunner.h  cuteDslFMHARunner.cpp  cuteDslFMHARunner.h  fmhaParams_v2.h  utilKernels.cu  utilKernels.h
cpp/kernels/decodeAttentionKernels/: decoderXQARunner.cpp  decoderXQARunner.h
cpp/kernels/embeddingKernels/: embeddingKernels.cu  embeddingKernels.h
cpp/kernels/gdnKernels/: cuteDslGDNRunner.cpp  cuteDslGDNRunner.h  gdnKernelUtils.cu  gdnKernelUtils.cuh
cpp/kernels/mamba/: causalConv1d.cu  causalConv1d.h  cuteDslSSDRunner.cpp  cuteDslSSDRunner.h  ssdVarlenMetadata.cu  ssdVarlenMetadata.h
cpp/kernels/moe/: f16MoeSupportKernels.cu  f16MoeSupportKernels.h  moePerExpertScaleKernels.cu  moePerExpertScaleKernels.h  moeTopkSoftmaxKernels.cu
cpp/kernels/multiDeviceKernels/: cuteDslGemmNvFp4Runner.cpp  cuteDslGemmNvFp4Runner.h  scaleConvert.cu  scaleConvert.h
cpp/kernels/posEncoding/: applyRopeWriteKV.cu  applyRopeWriteKV.h  initializeCosSinCache.cu  initializeCosSinCache.h
cpp/kernels/preprocessKernels/: audioFbankKernels.cu  audioFbankKernels.h  imageUtilKernels.cu  imageUtilKernels.h
cpp/kernels/speculative/: ddtreeKernels.cu  ddtreeKernels.h  dflashAcceptKernels.cu  dflashAcceptKernels.h  dflashRuntimeKernels.cu  dflashRuntimeKernels.h  eagleAcceptKernels.cu  eagleAcceptKernels.h  eagleUtilKernels.cu  eagleUtilKernels.h  gemma4MTPRuntimeKernels.cu  gemma4MTPRuntimeKernels.h  mtpStateScatterKernels.cu  mtpStateScatterKernels.h  speculativeKernelsUtils.h
cpp/kernels/talkerMLPKernels/: cuteDslGemmRunner.cu  cuteDslGemmRunner.h
cpp/multimodal/: audioRunner.cpp  audioRunner.h  audioUtils.cpp  audioUtils.h  code2WavRunner.cpp  code2WavRunner.h  gemma4AudioRunner.cpp  gemma4AudioRunner.h  gemma4UnifiedAudioRunner.cpp  gemma4UnifiedAudioRunner.h  gemma4UnifiedVisionRunner.cpp  gemma4UnifiedVisionRunner.h  gemma4ViTRunner.cpp  gemma4ViTRunner.h  internViTRunner.cpp  internViTRunner.h  modelTypes.h  multimodalRunner.cpp  multimodalRunner.h  nemotronOmniAudioRunner.cpp  nemotronOmniAudioRunner.h  nemotronOmniViTRunner.cpp  nemotronOmniViTRunner.h  phi4mmViTRunner.cpp  phi4mmViTRunner.h  qwen25vlViTRunner.cpp  qwen25vlViTRunner.h  qwen3omniViTRunner.cpp  qwen3omniViTRunner.h  qwen3vlViTRunner.cpp  qwen3vlViTRunner.h  qwenViTRunner.cpp  qwenViTRunner.h
cpp/plugins/allReducePlugin/: allReducePlugin.cpp  allReducePlugin.h
cpp/plugins/attentionPlugin/: attentionPlugin.cpp  attentionPlugin.h
cpp/plugins/dflashTargetKVCacheUpdatePlugin/: dflashTargetKVCacheUpdatePlugin.cpp  dflashTargetKVCacheUpdatePlugin.h
cpp/plugins/fp16MoePlugin/: fp16MoePlugin.cpp  fp16MoePlugin.h
cpp/plugins/fusedNvfp4GemmAllReducePlugin/: fusedNvfp4GemmAllReducePlugin.cpp  fusedNvfp4GemmAllReducePlugin.h
cpp/plugins/gatedDeltaNet/: gatedDeltaNetPlugin.cpp  gatedDeltaNetPlugin.h
cpp/plugins/gemma4AudioAttentionPlugin/: gemma4AudioAttentionPlugin.cpp  gemma4AudioAttentionPlugin.h
cpp/plugins/mamba/: causalConv1dPlugin.cpp  causalConv1dPlugin.h
cpp/plugins/nvfp4MoePlugin/: README.md  nvfp4MoePlugin.cpp  nvfp4MoePlugin.h
cpp/plugins/nvfp4MoePluginGeforce/: README.md  nvfp4MoePluginGeforce.cpp  nvfp4MoePluginGeforce.h
cpp/plugins/utils/: pluginUtils.cpp  pluginUtils.h
cpp/plugins/vitAttentionPlugin/: vitAttentionPlugin.cpp  vitAttentionPlugin.h
cpp/profiling/: metrics.h  timer.cpp  timer.h
cpp/pybind/: CMakeLists.txt  edgellm_pybind.cpp
cpp/runtime/: audioLoader.cpp  audioLoader.h  audioUtils.cpp  audioUtils.h  hybridCacheManager.cpp  hybridCacheManager.h  imageUtils.cpp  imageUtils.h  kvCacheManager.cpp  kvCacheManager.h  llmInferenceRuntime.cpp  llmInferenceRuntime.h  llmInferenceSpecDecodeRuntime.cpp  llmInferenceSpecDecodeRuntime.h  llmRuntimeUtils.cpp  llmRuntimeUtils.h  mambaCacheManager.cpp  mambaCacheManager.h  melSpectrogram.cpp  melSpectrogram.h  qwen3OmniTTSRuntime.cpp  qwen3OmniTTSRuntime.h  streaming.cpp  streaming.h
cpp/runtime/config/: deploymentConfig.cpp  deploymentConfig.h  inferenceDims.cpp  inferenceDims.h  inferencePhase.h  llmEngineConfig.cpp  llmEngineConfig.h
cpp/runtime/debug/: layerDebugger.cpp  layerDebugger.h
cpp/runtime/decoding/: decoderRegistry.cpp  decoderRegistry.h  decoderUtils.cpp  decoderUtils.h  decodingStrategy.h  dflashDecodeUtils.cpp  dflashDecodeUtils.h  dflashDecoder.cpp  dflashDecoder.h  eagleDecoder.cpp  eagleDecoder.h  gemma4MTPDecoder.cpp  gemma4MTPDecoder.h  logitBias.cpp  logitBias.h  mtpDecoder.cpp  mtpDecoder.h  specDecodeUtils.cpp  specDecodeUtils.h  vanillaDecoder.cpp  vanillaDecoder.h
cpp/runtime/exec/: engineExecutor.cpp  engineExecutor.h  registryBuilder.cpp  registryBuilder.h  tensorMap.cpp  tensorMap.h  tensorRegistry.cpp  tensorRegistry.h
cpp/runtime/features/: deepstackBinding.cpp  deepstackBinding.h
cpp/runtime/legacy/: eagleDraftEngineRunner.cpp  eagleDraftEngineRunner.h  llmEngineRunner.cpp  (+1 more)
cpp/sampler/: sampling.cu  sampling.h
cpp/tokenizer/: tokenEncoder.cpp  tokenEncoder.h  tokenizer.cpp  tokenizer.h  tokenizerUtils.cpp
examples/llm/: CMakeLists.txt  llm_bench.cpp  llm_build.cpp  llm_inference.cpp  llm_stream.cpp
experimental/pybind/: CMakeLists.txt  edgellm_pybind.cpp
(+1523 files in other folders)
