[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorrt-edgellm"
dynamic = ["version"]
description = "A Python package for quantizing and exporting LLMs for edge deployment"
readme = "README.md"
keywords = [
    "nvidia",
    "tensorrt",
    "deeplearning",
    "inference",
    "edge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "torch==2.12.0",
    "transformers==5.9.0",
    "onnx==1.19.0",
    "onnxscript==0.7.0",
    "safetensors==0.7.0",
    "numpy==2.4.6",
    "onnx-graphsurgeon==0.6.1",
]

[project.optional-dependencies]
tools = [
    "nvidia-modelopt==0.44.0",
    "datasets==4.8.5",
    "tqdm==4.67.3",
    "einops==0.8.2",
    "peft==0.19.1",
    "soundfile==0.13.1",
    "librosa==0.11.0",
    "tiktoken==0.13.0",
    "torchvision==0.27.0",
    "backoff",
]
server = [
    "fastapi==0.136.1",
    "pybind11==2.13.6",
    "uvicorn==0.47.0",
]
dev = []

[project.scripts]
tensorrt-edgellm-quantize = "tensorrt_edgellm.scripts.quantize:main"
tensorrt-edgellm-export = "tensorrt_edgellm.scripts.export:main"
tensorrt-edgellm-insert-lora = "tensorrt_edgellm.scripts.insert_lora:main"
tensorrt-edgellm-process-lora = "tensorrt_edgellm.scripts.process_lora_weights:main"
tensorrt-edgellm-merge-lora = "tensorrt_edgellm.scripts.merge_lora:main"
tensorrt-edgellm-reduce-vocab = "tensorrt_edgellm.scripts.reduce_vocab:main"
tensorrt-edgellm-preprocess-audio = "tensorrt_edgellm.scripts.preprocess_audio:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorrt_edgellm*", "experimental*"]

[tool.setuptools.package-data]
tensorrt_edgellm = ["README.md"]
"tensorrt_edgellm.chat_templates" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "tensorrt_edgellm._version.__version__"}
